--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,6 @@
     <color name="red">#ff1e0c</color>
     <color name="background">#d5d6d6</color>
     <color name="black">#000000</color>
-    <color name="blueButton">#6D9FC7</color>
+    <color name="blueButton">#3497da</color>
     <color name="white">#FFFFFF</color>
 </resources>
