activity details change + swiping works

--- a/app/src/main/res/layout/my_booking_item.xml
+++ b/app/src/main/res/layout/my_booking_item.xml
@@ -98,6 +98,7 @@
                 android:layout_marginEnd="15dp"
                 android:layout_marginRight="15dp"
                 android:layout_weight="1"
+                android:id="@+id/myBooking_viewBtn"
                 android:background="#6D9FC7"
                 android:onClick="viewDetails"
                 android:text="@string/view_detail"
