--- a/app/src/main/res/layout/fragment_session_details.xml
+++ b/app/src/main/res/layout/fragment_session_details.xml
@@ -144,6 +144,7 @@
     </LinearLayout>
 
     <Button
+        android:id="@+id/session_bookBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/session_infoLayout"
