--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -59,13 +59,25 @@
         android:textColor="@color/white"
         android:textSize="20sp" />
 
+    <Button
+        android:id="@+id/registerBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/loginBtn"
+        android:layout_marginBottom="15dp"
+        android:background="#44C56B"
+        android:gravity="center"
+        android:text="@string/register"
+        android:textColor="@color/white"
+        android:textSize="18sp" />
+
     <TextView
         android:id="@+id/forgot_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/loginBtn"
+        android:layout_below="@+id/registerBtn"
         android:linksClickable="true"
         android:text="@string/forgotten_password"
         android:textAppearance="?android:attr/textAppearanceSmall"
