--- a/app/src/main/res/layout/my_booking_item.xml
+++ b/app/src/main/res/layout/my_booking_item.xml
@@ -13,6 +13,7 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
     <LinearLayout
+        android:id="@+id/deleteView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
@@ -93,12 +94,12 @@
             android:orientation="horizontal">
 
             <Button
+                android:id="@+id/myBooking_viewBtn"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="15dp"
                 android:layout_marginRight="15dp"
                 android:layout_weight="1"
-                android:id="@+id/myBooking_viewBtn"
                 android:background="#6D9FC7"
                 android:onClick="viewDetails"
                 android:text="@string/view_detail"
