--- a/app/src/main/res/layout/content_my_booking.xml
+++ b/app/src/main/res/layout/content_my_booking.xml
@@ -14,11 +14,17 @@
     tools:context="com.utshelps.utshelpsapp.MyBookingActivity"
     tools:showIn="@layout/activity_my_booking">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/myBooking_recyclerView"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    </android.support.v7.widget.RecyclerView>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/myBooking_recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        </android.support.v7.widget.RecyclerView>
+
+    </ScrollView>
 
 </RelativeLayout>
