--- a/app/src/main/res/layout/my_booking_item.xml
+++ b/app/src/main/res/layout/my_booking_item.xml
@@ -139,7 +139,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/black">
+        android:background="@color/black" />
 
-    </LinearLayout>
 </LinearLayout>
