--- a/app/src/main/res/layout/reminder.xml
+++ b/app/src/main/res/layout/reminder.xml
@@ -3,26 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <Spinner
+        android:id="@+id/reminder_spinner"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:orientation="vertical"
-        android:padding="30dp">
+        android:layout_gravity="center_horizontal" />
 
-        <Button
-            android:id="@+id/reminder_selectDate"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="@string/select_a_date" />
-
-        <Button
-            android:id="@+id/reminder_selectTime"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="@string/select_a_time" />
-
-    </LinearLayout>
 </FrameLayout>
