--- a/app/src/main/res/layout/content_booking_detail.xml
+++ b/app/src/main/res/layout/content_booking_detail.xml
@@ -139,17 +139,17 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:paddingLeft="10dp"
-                android:text="@string/topics"
+                android:text="Type:"
                 android:textColor="@color/black"
                 android:textSize="17sp"
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/bookingDetail_topics"
+                android:id="@+id/bookingDetail_type"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/academic_writing"
+                android:text=""
                 android:textColor="@color/black"
                 android:textSize="17sp"
                 android:textStyle="bold" />
