--- a/app/src/main/res/layout/my_booking_item.xml
+++ b/app/src/main/res/layout/my_booking_item.xml
@@ -44,7 +44,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingBottom="6dp"
-                    android:text="@string/workshop"
+                    android:text="Session"
                     android:textColor="#000000"
                     android:textSize="16sp"
                     android:textStyle="bold" />
